<resources>
    <string name="app_name">iBaby</string>
    <string name="any_questions">Any Questions ?</string>
    <string name="blood">Blood</string>
    <string name="tips_or_suggestion">Tips Or Suggestion</string>
    <string name="medicine_doctor_and_hospital">Medicine, Doctor and Hospital</string>
    <string name="products_and_gear">Products and Gear</string>
    <string name="pregnancy_weight_calculator">Pregnancy Weight Calculator</string>
    <string name="pregnancy_to_do_list">Pregnancy To-Do List</string>
    <string name="due_date_calculator">Due Date Calculator</string>
    <string name="vaccine_routine">Vaccine Routine</string>
    <string name="pregnancy_safety">Pregnancy Safety</string>
    <string name="prenatal_care_and_tests">Prenatal Care and Tests</string>
    <string name="pregnancy_calculator">Pregnancy Calculator</string>
    <string name="urgent_help">Urgent Help</string>
    <string name="general_problem">General Problem</string>
    <string name="family_planing">Family planing</string>
    <string name="ovulation_calculator">Ovulation Calculator</string>
    <string name="ovulation_symptoms">Ovulation Symptoms</string>
    <string name="getting_pregnancy">Getting Pregnancy</string>
    <string name="fertility_conditions_treatment">Fertility conditions - treatment</string>
    <string name="infertility_trouble_conceiving">Infertility - Trouble Conceiving</string>
    <string name="healty_food">Healty Food</string>
    <string name="product_and_accessories">Product and Accessories</string>
    <string name="is_it_normal">Is It Normal?</string>
    <string name="nutrition_and_weight">Nutrition and Weight</string>
    <string name="baby_names">Baby Names</string>
    <string name="medicine_guide">Medicine Guide</string>
    <string name="baby_sleep_and_fitness">Baby Sleep and Fitness</string>
    <string name="sleep_and_feeding_schedules">Sleep and Feeding Schedules</string>
    <string name="baby_problem">Baby Problem</string>
    <string name="vaccine_scheduler">Vaccine Scheduler</string>
    <string name="baby_training">Baby Training</string>
    <string name="trying_to_conceive">Trying to conceive</string>
    <string name="first_day_of_your_last_period">First day of your last period</string>
    <string name="well_baby_checkups">Well-Baby Checkups</string>
    <string name="title_activity_product">Product - iBaby</string>
    <string name="clinic_details">
        " Our clinics provide confidential and non-judgemental sexual and"
        "reproductive health care.\n "
        "Our clinical services include contraception, STI testing and treatment, cervical screening,"
        "pregnancy testing, abortion referrals, PMS and menopause advice, HPV vaccinations, and "
        "advice and support for other sexual and reproductive health issues.\n "
        "We work with people of any gender, age, nationality or sexual orientation. "
    </string>
    <string name="family_plan_product">Product - iBaby</string>
    <string name="title_activity_clinics">Clinics - iBaby</string>
    <string name="action_settings">Settings</string>
    <string name="ask_for_an_appointment">Ask for an APPOINTMENT</string>
    <string name="clinic_name">
        Amar Clinic, Mirpur-1, Dhaka [01521305745]\n
        Tor Clinic, Mirpur-1, Dhaka [01521305745]\n
        Sobar Clinic, Mirpur-1, Dhaka [01521305745]\n
        Amar Clinic, Mirpur-1, Dhaka [01521305745]\n
        Tor Clinic, Mirpur-1, Dhaka [01521305745]\n
        Sobar Clinic, Mirpur-1, Dhaka [01521305745]
    </string>
    <string name="title_activity_advice">Advice - iBaby</string>
    <string name="advice_text">We’ve got information about everything to do with your oranga taihema, your sexual and reproductive health - from contraception, to STIs, the body, relationships, pregnancy, abortion, diverse sexual and gender identities, and more.</string>

    <string name="title_activity_contracep">Contraception - iBaby</string>
    <string name="title_activity_keeping_safe">KeepingSafe - iBaby</string>
    <string name="title_activity_midwife_service">Midwife Service</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="parentaCare">"Free consultation visits with tour of birth center suites \n"
    " Initial prenatal visit, including a full medical history, nutrition and lifestyle counseling, and physical exam.\n"
    " Hour-long visits allowing time for thorough education, informed decision making, and connection between midwife and client.\n"
    " Access to labs, testing and ultrasound\n"
    " Availability to clients day and night for questions/concerns\n"
    " Medical consultation and referral available as necessary\n"
    " Resources for childbirth education, massage, chiropractic and acupuncture"</string>
    <string name="birthAttendance">"Birth Center or home birth services available\n"
        "Water birth options at Birth Center and in home\n"
        "24 hour/day, 7 days/week availability\n"
        "Medical consultation and referral available as necessary\n"
        "Continued labor support by midwife if hospital transfer is necessary"
    </string>
    <string name="postpartum">
        "Continuous care and support from midwives in immediate postpartum\n"
        "Complete physical exam of newborn, including newborn medication administration\n"
        "Breastfeeding support\n"
        "Postpartum education and take-home package\n"
        "24/7 availablilty to you and your newborn in the days and weeks following birth\n"
        "Postpartum visit at your home on Day 2, follow-up office visits on Day 10, Week 3 and Week 6\n"
        "Well-newborn care, including newborn metabolic screens, congenital heart defect screen, and hearing screen.\n"
    </string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
