<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rdnas.ibaby.Parent_Baby_Care.ParentBabyCareActivity">

        <Button
            android:id="@+id/isItNormalBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/is_it_normal"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/nutritionWeightBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/nutrition_and_weight"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/babyNameBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/baby_names"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/medicineGuideBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/medicine_guide"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/babySleepFitnessBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/baby_sleep_and_fitness"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/sleepFeedSchedulBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/sleep_and_feeding_schedules"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/vaccineSchedulerBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/vaccine_scheduler"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/babyProblemBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/baby_problem"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/babyTrainingBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/baby_training"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/babyCheckUpBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/well_baby_checkups"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp"
            android:paddingStart="5sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/babyDoctorHospitalBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/medicine_doctor_and_hospital"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp" />
        <Button
            android:id="@+id/babyProductBtn"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/products_and_gear"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp" />
        <Button
            android:id="@+id/anyQuestion"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingLeft="5sp"
            android:text="@string/any_questions"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp" />



    </LinearLayout>
