<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/background"
    tools:context="com.example.rdnas.ibaby.Pregnant.PregnantActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_parental_care" />

                <Button
                    android:id="@+id/prenatalCareBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:text="@string/prenatal_care_and_tests" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_greeding_pregnency" />

                <Button
                    android:id="@+id/pregnancySafetyBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:text="@string/pregnancy_safety" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_calendar_calculator" />

                <Button
                    android:id="@+id/pregnancyCalculatortBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:onClick="onCLickPregnancyCalcu"
                    android:text="@string/pregnancy_calculator" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_vaccin_routine" />

                <Button
                    android:id="@+id/vaccineRoutineBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:text="@string/vaccine_routine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_due_date_calculator" />

                <Button
                    android:id="@+id/dueDateCalculatorBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:text="@string/due_date_calculator" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_vaccin_routine" />

                <Button
                    android:id="@+id/toDoListBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:text="@string/pregnancy_to_do_list" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_nutrition_weight" />

                <Button
                    android:id="@+id/pregnancyWeightCalBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:onClick="onClickPregnancyWeightCal"
                    android:text="@string/pregnancy_weight_calculator" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_product_accessories" />

                <Button
                    android:id="@+id/productGearBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:text="@string/products_and_gear" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_madicine_doctor_hospital" />

                <Button
                    android:id="@+id/medicineBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:text="@string/medicine_doctor_and_hospital" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_baby_training" />

                <Button
                    android:id="@+id/tipsSuggestionBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:text="@string/tips_or_suggestion" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_blood" />

                <Button
                    android:id="@+id/bloodBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:text="@string/blood" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gory"
                    android:src="@drawable/ic_any_question" />

                <Button
                    android:id="@+id/anyQuestion"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/bt_gory"
                    android:text="@string/any_questions" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
